--- a/MakeMeTakeMeReadMe/Views/Home/Index.cshtml
+++ b/MakeMeTakeMeReadMe/Views/Home/Index.cshtml
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset='utf-8'>
-  <title>MakeMeTakeMeReadMe</title>
-  <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'>
-  <link rel='stylesheet' href='~/css/styles.css'>
-</head>
-<body>
+@{
+  Layout = "_Layout";
+}
   <div class="container">
     <div class="jumbotron">
       <h1>MakeMeTakeMeReadMe</h1>
@@ -31,5 +25,4 @@
       </div>
     </div>
   </div>
-</body>
-</html>
+
