update readmeoneoutput view to shared layout.

--- a/MakeMeTakeMeReadMe/Views/Home/ReadmeOneOutput.cshtml
+++ b/MakeMeTakeMeReadMe/Views/Home/ReadmeOneOutput.cshtml
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset='utf-8'>
-  <title>MakeMeTakeMeReadMe</title>
-  <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'>
-  <link rel='stylesheet' href='~/css/styles.css'>
-</head>
-<body>
+@{
+  Layout = "_Layout";
+}
   <div class="jumbotron">
     <h1>MakeMeTakeMeReadMe</h1>
   </div>
@@ -28,5 +22,3 @@
       <a href="/ReadmeOneInput" class="btn btn-info large">REMAKE</a> <a href="/" class="btn btn-info large">Home</a>
     </div>
   </div>
-</body>
-</html>
