--- a/MakeMeTakeMeReadMe/Views/Home/ReadmeOneInput.cshtml
+++ b/MakeMeTakeMeReadMe/Views/Home/ReadmeOneInput.cshtml
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset='utf-8'>
-  <title>MakeMeTakeMeReadMe</title>
-  <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'>
-  <link rel='stylesheet' runat="server" href='~/css/styles.css' type="text/css">
-</head>
-<body>
+@{
+  Layout = "_Layout";
+}
   <div class="container">
     <form action="/readmeOneOutput" method="post">
       <div class="row">
@@ -62,5 +56,4 @@
       </div>
     </form>
   </div>
-</body>
-</html>
+
