--- a/MakeMeTakeMeReadMe/wwwroot/css/styles.css
+++ b/MakeMeTakeMeReadMe/wwwroot/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://coding-assets.s3-us-west-2.amazonaws.com/backgrounds/MakeMeTakeMeReadMe.Solution.jpg");
+  background-image: url("https://coding-assets.s3-us-west-2.amazonaws.com/MakeMeTakeMeReadMe4.jpg");
   background-blend-mode: multiply;
   background-color: #3D3A39;
   background-position: center;
@@ -12,7 +12,6 @@ img {
   max-width: 100%;
   margin-left: auto;
   margin-right: auto;
-
 }
 
 .row {
@@ -26,8 +25,10 @@ p {
   color: white;
 }
 
-.jumbotron {
+#header {
   text-align: center;
+  font-size: 6em;
+  margin: 2%;
 }
 
 .theme-img-top{
@@ -35,7 +36,7 @@ p {
 }
 
 label {
-  color: white;
+  color: black;
 }
 
 .space {
@@ -48,4 +49,34 @@ label {
 
 .theme-text {
   color: black;
+}
+
+div#footer {
+  position:fixed;
+  bottom:0px;
+  left:0px;
+  width:100%;
+  background:rgba(193, 115, 127, 0.85);
+  padding:8px;
+  text-align: center;
+  font-family: 'Fredoka One', cursive;
+}
+
+.nav {
+  background-color:rgba(149, 151, 195, 0.85);
+  font-family: 'Fredoka One', cursive;
+}
+
+.container {
+  margin-top: 3%;
+  margin-bottom: 3%;
+  padding: 2%;
+  background-color: rgba(149, 151, 195, 0.85);
+  border-radius: 10px;
+}
+
+
+.jumbotron {
+  text-align: center;
+  background-color: rgba(193, 115, 127, 0.85);
 }
