add form fields for new input variables.

--- a/MakeMeTakeMeReadMe/Views/Home/ReadmeOneInput.cshtml
+++ b/MakeMeTakeMeReadMe/Views/Home/ReadmeOneInput.cshtml
@@ -45,7 +45,21 @@
             <label for="keyword6">a keyword 6</label>
             <input class="form-control" id="keyword6" name="keyword6" type="text">
           </div>
-        </div>        
+        </div>  
+        <div class="col-md-6">
+          <div class="form-group">
+            <label for="heroURL">url for hero image</label>
+            <input class="form-control" id="heroURL" name="heroURL" type="text">
+          </div>
+          <div class="form-group">
+            <label for="bugStatus">bug status</label>
+            <input class="form-control" id="bugStatus" name="bugStatus" type="text">
+          </div>
+          <div class="form-group">
+            <label for="bugDate">bug status date</label>
+            <input class="form-control" id="bugDate" name="bugDate" type="text">
+          </div>
+        </div>                
       </div>
       <div class="row">
         <div class="col-md-1">
