add data protection section header.

--- a/MakeMeTakeMeReadMe/Views/Home/ReadmeOneOutput.cshtml
+++ b/MakeMeTakeMeReadMe/Views/Home/ReadmeOneOutput.cshtml
@@ -20,6 +20,8 @@
       <br>
       <p>@Model.GetSnippet("requirementSectionHeader")</p>
       <br>
+      <p>@Model.GetSnippet("protectionSectionHeader")</p>
+      <br>
       <p>@Model.GetSnippet("setupSectionHeader")</p>
       <br>
       <p>@Model.GetSnippet("qandcSectionHeader")</p>
