add contributors section header

--- a/MakeMeTakeMeReadMe/Views/Home/ReadmeOneOutput.cshtml
+++ b/MakeMeTakeMeReadMe/Views/Home/ReadmeOneOutput.cshtml
@@ -32,6 +32,8 @@
       <br>
       <p>@Model.GetSnippet("bugSectionHeader")</p>
       <br>
+      <p>@Model.GetSnippet("contributorsSectionHeader")</p>
+      <br>
       <p>#@Model.GetSnippet("keyword1"), #@Model.GetSnippet("keyword2"), #@Model.GetSnippet("keyword3"), #@Model.GetSnippet("keyword4"), #@Model.GetSnippet("keyword5"), #@Model.GetSnippet("keyword6")</p>
       <br>
     </div>
