add additional user fields and re-structured output.

--- a/MakeMeTakeMeReadMe/Views/Home/ReadmeOneOutput.cshtml
+++ b/MakeMeTakeMeReadMe/Views/Home/ReadmeOneOutput.cshtml
@@ -14,10 +14,10 @@
       <br>
       <p>@Model.GetSnippet("navigationBar")</p>
       <br>
+
       <p>@Model.GetSnippet("aboutOpen")@Model.GetSnippet("about")@Model.GetSnippet("aboutClose")</p>
       <br>
-      <p>@Model.GetSnippet("bugOpen")@Model.GetSnippet("bugStatus")@Model.GetSnippet("bugMiddle")@Model.GetSnippet("bugDate")@Model.GetSnippet("bugClose")</p>
-      <br>
+
       <p>@Model.GetSnippet("requirementSectionHeader")</p>
       <br>
       <p>@Model.GetSnippet("protectionSectionHeader")</p>
@@ -32,7 +32,12 @@
       <br>
       <p>@Model.GetSnippet("bugSectionHeader")</p>
       <br>
+
+      <p>@Model.GetSnippet("bugOpen")@Model.GetSnippet("bugStatus")@Model.GetSnippet("bugMiddle")@Model.GetSnippet("bugDate")@Model.GetSnippet("bugClose")</p>
+      <br>
       <p>@Model.GetSnippet("contributorsSectionHeader")</p>
+      <br>
+      <p>@Model.GetSnippet("contributorStartMarkdown")</p>
       <br>
       <p>#@Model.GetSnippet("keyword1"), #@Model.GetSnippet("keyword2"), #@Model.GetSnippet("keyword3"), #@Model.GetSnippet("keyword4"), #@Model.GetSnippet("keyword5"), #@Model.GetSnippet("keyword6")</p>
       <br>
