update helper text.

--- a/MakeMeTakeMeReadMe/Views/Home/ReadmeOneInput.cshtml
+++ b/MakeMeTakeMeReadMe/Views/Home/ReadmeOneInput.cshtml
@@ -64,7 +64,7 @@
         
           @using (Html.BeginForm("Index", "Home", FormMethod.Post))
         {
-          <b>Want Additional Benefit: </b><br />
+          <b>Technologies Used: </b><br />
           <span>| Photoshop: </span> @Html.CheckBox("Photoshop",true)
           <span>| Vscode: </span> @Html.CheckBox("Vscode", false)
           <span>| Mysqlworkbench: </span> @Html.CheckBox("Mysqlworkbench", false)    
