update form helper text.

--- a/MakeMeTakeMeReadMe/Views/Home/ReadmeOneInput.cshtml
+++ b/MakeMeTakeMeReadMe/Views/Home/ReadmeOneInput.cshtml
@@ -22,29 +22,29 @@
         </div>
         <div class="col-md-6">
           <div class="form-group">
-            <label for="keyword1">a keyword 1</label>
+            <label for="keyword1">keyword 1</label>
             <input class="form-control" id="keyword1" name="keyword1" type="text">
           </div>
           <div class="form-group">
-            <label for="keyword2">a keyword 2</label>
+            <label for="keyword2">keyword 2</label>
             <input class="form-control" id="keyword2" name="keyword2" type="text">
           </div>
           <div class="form-group">
-            <label for="keyword3">a keyword 3</label>
+            <label for="keyword3">keyword 3</label>
             <input class="form-control" id="keyword3" name="keyword3" type="text">
           </div>
         </div>
         <div class="col-md-6">
           <div class="form-group">
-            <label for="keyword4">a keyword 4</label>
+            <label for="keyword4">keyword 4</label>
             <input class="form-control" id="keyword4" name="keyword4" type="text">
           </div>
           <div class="form-group">
-            <label for="keyword5">a keyword 5</label>
+            <label for="keyword5">keyword 5</label>
             <input class="form-control" id="keyword5" name="keyword5" type="text">
           </div>
           <div class="form-group">
-            <label for="keyword6">a keyword 6</label>
+            <label for="keyword6">keyword 6</label>
             <input class="form-control" id="keyword6" name="keyword6" type="text">
           </div>
         </div>  
