--- a/MakeMeTakeMeReadMe/Views/Home/ReadmeOneInput.cshtml
+++ b/MakeMeTakeMeReadMe/Views/Home/ReadmeOneInput.cshtml
@@ -65,7 +65,7 @@
           @using (Html.BeginForm("Index", "Home", FormMethod.Post))
         {
           <b>Technologies Used: </b><br />
-          <span>| Photoshop: </span> @Html.CheckBox("Photoshop",true)
+          <span>| Photoshop: </span> @Html.CheckBox("Photoshop",false)
           <span>| Vscode: </span> @Html.CheckBox("Vscode", false)
           <span>| Mysqlworkbench: </span> @Html.CheckBox("Mysqlworkbench", false)    
         }
