push commit of changes in hopes i push before Shawn pulls repo for help.

--- a/MakeMeTakeMeReadMe/Views/Home/ReadmeOneInput.cshtml
+++ b/MakeMeTakeMeReadMe/Views/Home/ReadmeOneInput.cshtml
@@ -69,6 +69,16 @@
           <span>| Vscode: </span> @Html.CheckBox("Vscode", false)
           <span>| Mysqlworkbench: </span> @Html.CheckBox("Mysqlworkbench", false)    
         }
+
+@*         @Html.Label("Technologies Used:")
+        @foreach (Course name in ViewBag.CourseId)
+        {
+          @Html.Label(name.Name)
+          @Html.CheckBox("CourseId", false, new { value = name.CourseId })
+        } *@
+
+
+        
         </div>
 
       </div>
