refactor all name references to be more in-line with project intent. begin refactoring markdown model to include more intuitive breakdown

--- a/MakeMeTakeMeReadMe/Views/Markdown/ReadmeOneInput.cshtml
+++ b/MakeMeTakeMeReadMe/Views/Markdown/ReadmeOneInput.cshtml
@@ -1,7 +1,7 @@
 @{
   Layout = "_Layout";
 }
-@model MakeMeTakeMeReadMe.Models.Snippets
+@model MakeMeTakeMeReadMe.Models.Markdown
 
   <div class="container">
     <form action="/readmeOneOutput" method="post">
@@ -64,9 +64,9 @@
 
           <div class="form-group">
             <b>Technologies Used: </b><br />
-            <span>| Photoshop: </span><input type="checkbox" name="Photoshop" value="true">
-            <span>| Vscode: </span><input type="checkbox" name="Vscode" value="true">
-            <span>| Mysqlworkbench:<input type="checkbox" name="Mysqlworkbench" value="true">    
+            <span>| Photoshop: </span><input type="checkbox" name="usesPhotoshop" value="true">
+            <span>| Vscode: </span><input type="checkbox" name="usesVscode" value="true">
+            <span>| Mysqlworkbench:<input type="checkbox" name="usesMysql" value="true">    
           </div>
         </div>
 
