stable build with linked in references properly posted on single selection.

--- a/MakeMeTakeMeReadMe/Views/Markdown/ReadmeOneInput.cshtml
+++ b/MakeMeTakeMeReadMe/Views/Markdown/ReadmeOneInput.cshtml
@@ -69,6 +69,47 @@
             <span>| Mysqlworkbench:<input type="checkbox" name="usesMysql" value="true">    
           </div>
         </div>
+        <div class="form-group">
+            <b>Contributors: </b><br />
+            <span>| Allison Sadin: <input type="checkbox" name="hasAllisonSadin" value="true">
+            <span>| Ben White: <input type="checkbox" name="hasBenWhite" value="true">
+            <span>| Ben Russell: <input type="checkbox" name="hasBenRussell" value="true">
+            <span>| Beverly Potts: <input type="checkbox" name="hasBeverlyPotts" value="true">
+            <span>| Brittany Lindgren: <input type="checkbox" name="hasBrittanyLindgren" value="true">
+            <span>| Christine Augustine: <input type="checkbox" name="hasChristineAugustine" value="true">
+            <span>| Chris Yoon: <input type="checkbox" name="hasChrisYoon" value="true">
+            <span>| Cody Fritz: <input type="checkbox" name="hasCodyFritz" value="true">
+            <span>| Deryck Jackson: <input type="checkbox" name="hasDeryckJackson" value="true">
+            <span>| Erich Richter: <input type="checkbox" name="hasErichRichter" value="true">
+            <span>| Evgeniya Chernaya: <input type="checkbox" name="hasEvgeniyaChernaya" value="true">
+            <span>| Frederick Ernest: <input type="checkbox" name="hasFrederickErnest" value="true">
+            <span>| Hannah Beinstein: <input type="checkbox" name="hasHannahBeinstein" value="true">
+            <span>| Ian Gregg: <input type="checkbox" name="hasIanGregg" value="true">
+            <span>| Ian Scott: <input type="checkbox" name="hasIanScott" value="true">
+            <span>| James Henager: <input type="checkbox" name="hasJamesHenager" value="true">
+            <span>| Jason Khan: <input type="checkbox" name="hasJasonKhan" value="true">
+            <span>| Jeffrey Kim: <input type="checkbox" name="hasJeffreyKim" value="true">
+            <span>| JohnNils Olson: <input type="checkbox" name="hasJohnNilsOlson" value="true">
+            <span>| Joseph Pearce: <input type="checkbox" name="hasJosephPearce" value="true">
+            <span>| Kate Skorija: <input type="checkbox" name="hasKateSkorija" value="true">
+            <span>| Kevin Davis: <input type="checkbox" name="hasKevinDavis" value="true">
+            <span>| Kyle Hubbard: <input type="checkbox" name="hasKyleHubbard" value="true">
+            <span>| Mariel Hamson: <input type="checkbox" name="hasMarielHamson" value="true">
+            <span>| Megan Hepner: <input type="checkbox" name="hasMeganHepner" value="true">
+            <span>| Micheal Hansen: <input type="checkbox" name="hasMichealHansen" value="true">
+            <span>| Noel Kirkland: <input type="checkbox" name="hasNoelKirkland" value="true">
+            <span>| Peter Grimm: <input type="checkbox" name="hasPeterGrimm" value="true">
+            <span>| Sara Kane: <input type="checkbox" name="hasSaraKane" value="true">
+            <span>| Sean Downs: <input type="checkbox" name="hasSeanDowns" value="true">
+            <span>| Spencer Moody: <input type="checkbox" name="hasSpencerMoody" value="true">
+            <span>| Taylor Phillips: <input type="checkbox" name="hasTaylorPhillips" value="true">
+            <span>| Taylor Somers: <input type="checkbox" name="hasTaylorSomers" value="true">
+            <span>| Teresa Rosinksi: <input type="checkbox" name="hasTeresaRosinksi" value="true">
+            <span>| Thomas Glenn: <input type="checkbox" name="hasThomasGlenn" value="true">
+            <span>| Tristan Emmerson: <input type="checkbox" name="hasTristanEmmerson" value="true">
+            <span>| Tyson Lackey: <input type="checkbox" name="hasTysonLackey" value="true">    
+          </div>
+        </div>
 
       </div>
       <div class="row">
