verify stable build with all contributor boxes working through output to markdown. DROP. EOD

--- a/MakeMeTakeMeReadMe/Views/Markdown/ReadmeOneOutput.cshtml
+++ b/MakeMeTakeMeReadMe/Views/Markdown/ReadmeOneOutput.cshtml
@@ -42,10 +42,46 @@
       <br>
       <p>#@Model.SectionHeaders("keyword1"), #@Model.SectionHeaders("keyword2"), #@Model.SectionHeaders("keyword3"), #@Model.SectionHeaders("keyword4"), #@Model.SectionHeaders("keyword5"), #@Model.SectionHeaders("keyword6")</p>
       <br>
-      @if (ViewBag.usesPhotoshop){<p>@Model.SectionHeaders("contributorAllisonSadin")</p>}
+      @if (ViewBag.usesPhotoshop){<p>"uses photoshop"</p>}
       @if (ViewBag.usesVscode){<p>"uses vscode"</p>}
       @if (ViewBag.usesMysql){<p>"uses workbench"</p>}
-
+      @if (ViewBag.hasAllisonSadin){<p>@Model.SectionHeaders("contributorAllisonSadin")</p>}
+      @if (ViewBag.hasBenWhite){<p>@Model.SectionHeaders("contributorBenWhite")</p>}
+      @if (ViewBag.hasBenRussell){<p>@Model.SectionHeaders("contributorBenRussell")</p>}
+      @if (ViewBag.hasBeverlyPotts){<p>@Model.SectionHeaders("contributorBeverlyPotts")</p>}
+      @if (ViewBag.hasBrittanyLindgren){<p>@Model.SectionHeaders("contributorBrittanyLindgren")</p>}
+      @if (ViewBag.hasChristineAugustine){<p>@Model.SectionHeaders("contributorChristineAugustine")</p>}
+      @if (ViewBag.hasChrisYoon){<p>@Model.SectionHeaders("contributorChrisYoon")</p>}
+      @if (ViewBag.hasCodyFritz){<p>@Model.SectionHeaders("contributorCodyFritz")</p>}
+      @if (ViewBag.hasDeryckJackson){<p>@Model.SectionHeaders("contributorDeryckJackson")</p>}
+      @if (ViewBag.hasErichRichter){<p>@Model.SectionHeaders("contributorErichRichter")</p>}
+      @if (ViewBag.hasEvgeniyaChernaya){<p>@Model.SectionHeaders("contributorEvgeniyaChernaya")</p>}
+      @if (ViewBag.hasFrederickErnest){<p>@Model.SectionHeaders("contributorFrederickErnest")</p>}
+      @if (ViewBag.hasHannahBeinstein){<p>@Model.SectionHeaders("contributorHannahBeinstein")</p>}
+      @if (ViewBag.hasIanGregg){<p>@Model.SectionHeaders("contributorIanGregg")</p>}
+      @if (ViewBag.hasIanScott){<p>@Model.SectionHeaders("contributorIanScott")</p>}
+      @if (ViewBag.hasJamesHenager){<p>@Model.SectionHeaders("contributorJamesHenager")</p>}
+      @if (ViewBag.hasJasonKhan){<p>@Model.SectionHeaders("contributorJasonKhan")</p>}
+      @if (ViewBag.hasJeffreyKim){<p>@Model.SectionHeaders("contributorJeffreyKim")</p>}
+      @if (ViewBag.hasJohnNilsOlson){<p>@Model.SectionHeaders("contributorJohnNilsOlson")</p>}
+      @if (ViewBag.hasJosephPearce){<p>@Model.SectionHeaders("contributorJosephPearce")</p>}
+      @if (ViewBag.hasKateSkorija){<p>@Model.SectionHeaders("contributorKateSkorija")</p>}
+      @if (ViewBag.hasKevinDavis){<p>@Model.SectionHeaders("contributorKevinDavis")</p>}
+      @if (ViewBag.hasKyleHubbard){<p>@Model.SectionHeaders("contributorKyleHubbard")</p>}
+      @if (ViewBag.hasMarielHamson){<p>@Model.SectionHeaders("contributorMarielHamson")</p>}
+      @if (ViewBag.hasMeganHepner){<p>@Model.SectionHeaders("contributorMeganHepner")</p>}
+      @if (ViewBag.hasMichealHansen){<p>@Model.SectionHeaders("contributorMichealHansen")</p>}
+      @if (ViewBag.hasNoelKirkland){<p>@Model.SectionHeaders("contributorNoelKirkland")</p>}
+      @if (ViewBag.hasPeterGrimm){<p>@Model.SectionHeaders("contributorPeterGrimm")</p>}
+      @if (ViewBag.hasSaraKane){<p>@Model.SectionHeaders("contributorSaraKane")</p>}
+      @if (ViewBag.hasSeanDowns){<p>@Model.SectionHeaders("contributorSeanDowns")</p>}
+      @if (ViewBag.hasSpencerMoody){<p>@Model.SectionHeaders("contributorSpencerMoody")</p>}
+      @if (ViewBag.hasTaylorPhillips){<p>@Model.SectionHeaders("contributorTaylorPhillips")</p>}
+      @if (ViewBag.hasTaylorSomers){<p>@Model.SectionHeaders("contributorTaylorSomers")</p>}
+      @if (ViewBag.hasTeresaRosinksi){<p>@Model.SectionHeaders("contributorTeresaRosinksi")</p>}
+      @if (ViewBag.hasThomasGlenn){<p>@Model.SectionHeaders("contributorThomasGlenn")</p>}
+      @if (ViewBag.hasTristanEmmerson){<p>@Model.SectionHeaders("contributorTristanEmmerson")</p>}
+      @if (ViewBag.hasTysonLackey){<p>@Model.SectionHeaders("contributorTysonLackey")</p>}
 
     </div>
   </div>
