get functionality from top to bottom of readme through the About section. includes functioning using bools for technologies

--- a/MakeMeTakeMeReadMe/Views/Markdown/ReadmeOneInput.cshtml
+++ b/MakeMeTakeMeReadMe/Views/Markdown/ReadmeOneInput.cshtml
@@ -53,6 +53,11 @@
             <label for="heroURL">url for hero image</label>
             <input class="form-control" id="heroURL" name="heroURL" type="text">
           </div>
+          
+          <div class="form-group">
+            <span>| Add Data Protection Section? </span><input type="checkbox" name="hasProtectingDataNav" value="true">
+            <span>| Add Bug Status? </span><input type="checkbox" name="hasBugStatusNav" value="true">
+          </div>
           <div class="form-group">
             <label for="bugStatus">bug status</label>
             <input class="form-control" id="bugStatus" name="bugStatus" type="text">
