finalize technologies used section variable and add to model. stable. EOD. DROP

--- a/MakeMeTakeMeReadMe/Views/Markdown/ReadmeOneInput.cshtml
+++ b/MakeMeTakeMeReadMe/Views/Markdown/ReadmeOneInput.cshtml
@@ -71,7 +71,17 @@
             <b>Technologies Used: </b><br />
             <span>| Photoshop: </span><input type="checkbox" name="usesPhotoshop" value="true">
             <span>| Vscode: </span><input type="checkbox" name="usesVscode" value="true">
-            <span>| Mysqlworkbench:<input type="checkbox" name="usesMysql" value="true">    
+            <span>| Mysqlworkbench:<input type="checkbox" name="usesMysql" value="true">
+            <span>| Javascript:<input type="checkbox" name="usesJavascript" value="true">    
+            <span>| CSS:<input type="checkbox" name="usesCss" value="true">    
+            <span>| Bootstrap:<input type="checkbox" name="usesBootstrap" value="true">
+            <span>| C#:<input type="checkbox" name="usesCsharp" value="true">
+            <span>| Swagger:<input type="checkbox" name="usesSwagger" value="true">
+            <span>| Asp.Net MVC:<input type="checkbox" name="usesAspDotnetMvc" value="true">
+            <span>| HTML:<input type="checkbox" name="usesHtml" value="true">
+            <span>| NodeJs:<input type="checkbox" name="usesNodeJs" value="true">
+            <span>| Webpack:<input type="checkbox" name="usesWebpack" value="true">
+            <span>| Jquery:<input type="checkbox" name="usesJquery" value="true">
           </div>
         </div>
         <div class="form-group">
