--- a/MakeMeTakeMeReadMe/Views/Markdown/ReadmeOneInput.cshtml
+++ b/MakeMeTakeMeReadMe/Views/Markdown/ReadmeOneInput.cshtml
@@ -8,11 +8,11 @@
       <div class="row">
         <div class="col-md-6">
           <div class="form-group">
-            <label for="title">a title</label>
+            <label for="title">title</label>
             <input class="form-control" id="title" name="title" type="text">
           </div>
           <div class="form-group">
-            <label for="tagline">a tagline</label>
+            <label for="tagline">tagline</label>
             <input class="form-control" id="tagline" name="tagline" type="text">
           </div>
           <div class="form-group">
@@ -50,13 +50,14 @@
         </div>  
         <div class="col-md-6">
           <div class="form-group">
-            <label for="heroURL">url for hero image</label>
+            <label for="heroURL">hero url (see documentation for stocks)</label>
             <input class="form-control" id="heroURL" name="heroURL" type="text">
           </div>
           
           <div class="form-group">
             <span>| Add Data Protection Section? </span><input type="checkbox" name="hasProtectingDataNav" value="true">
             <span>| Add Bug Status? </span><input type="checkbox" name="hasBugStatusNav" value="true">
+            <span>| Add Section on Cloning? </span><input type="checkbox" name="hasCloningDataNav" value="true">
           </div>
           <div class="form-group">
             <label for="bugStatus">bug status</label>
